--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==5.0.6
+django-filter==24.2
 djangorestframework==3.15.2
 idna==3.7
 psycopg2-binary==2.9.9
